# bamboo-mcp-services

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README-cric_agent.md  README-document_monitor_agent.md  README-github_doc_sync_agent.md  README.md  pyproject.toml  requirements.txt
src/askpanda_atlas_agents/agents/document_monitor_agent/: cli.py
src/askpanda_atlas_agents/resources/config/: cric-agent.yaml
src/bamboo_mcp_services/agents/document_monitor_agent/: cli.py
src/bamboo_mcp_services/agents/github_doc_sync_agent/: cli.py  github_markdown_sync.py
tests/agents/github_doc_sync_agent/: test_github_doc_sync_agent.py
