[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bamboo-mcp-services"
version = "1.0.0"
description = "Bamboo MCP Services"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=0.10",
    "requests>=2.31",
    "pyyaml>=6.0",
    "pandas>=2.0",
    # Embeddings stack — versions pinned for PyTorch 2.2.x compatibility.
    # torch 2.4+ is not available on macOS/miniforge with Python 3.12;
    # sentence-transformers 3.x and transformers 4.41+ require torch>=2.4
    # and will fail at import time.  numpy<2 is required because torch 2.2.x
    # was compiled against the NumPy 1.x ABI.
    "numpy<2",
    "torch==2.2.2",
    "transformers==4.40.0",
    "sentence-transformers==2.7.0",
    "langchain-huggingface>=1.2",
    "langchain-community>=0.4",
    # Agent dependencies
    "chromadb>=0.4.0",
    "pdfminer.six>=20221105",
    "python-docx>=0.8.11",
]

[project.optional-dependencies]
dev = [
    "flake8",
    "pytest",
    "pytest-cov",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
bamboo-document-monitor = "bamboo_mcp_services.agents.document_monitor_agent.cli:main"
bamboo-github-sync = "bamboo_mcp_services.agents.github_doc_sync_agent.cli:main"
bamboo-ingestion = "bamboo_mcp_services.agents.ingestion_agent.cli:main"
bamboo-cric = "bamboo_mcp_services.agents.cric_agent.cli:main"
bamboo-dummy = "bamboo_mcp_services.agents.dummy_agent.cli:main"
